sdk/include/ml.h

/* ========================================================================== */
/*                              CORE TYPES & UTILITIES                         */
/* ========================================================================== */

/** Plugin Id string type - plain char* for plugin id
 * @ref ml_get_device_list device must in list of plugin ids
 */
typedef const char* ml_PluginId;
/** Path string type - plain char* for file paths */
typedef const char* ml_Path;
typedef enum {
    ML_LOG_LEVEL_TRACE, /* Trace messages */
    ML_LOG_LEVEL_DEBUG, /* Debug messages */
    ML_LOG_LEVEL_INFO,  /* Informational messages */
    ML_LOG_LEVEL_WARN,  /* Warning messages */
    ML_LOG_LEVEL_ERROR  /* Error messages */
} ml_LogLevel;
/** Logging callback function type */
typedef void (*ml_log_callback)(ml_LogLevel, const char*);
/** Token callback for streaming generation */
typedef bool (*ml_token_callback)(const char* token, void* user_data);
/* ====================  Data Structures  ==================================== */

/** Profile data structure for performance metrics */
typedef struct {
    int64_t ttft;        /* Time to first token (us) */
    int64_t prompt_time; /* Prompt processing time (us) */
    int64_t decode_time; /* Token generation time (us) */

    int64_t prompt_tokens;    /* Number of prompt tokens */
    int64_t generated_tokens; /* Number of generated tokens */
    int64_t audio_duration;   /* Audio duration (us) */

    double prefill_speed;    /* Prefill speed (tokens/sec) */
    double decoding_speed;   /* Decoding speed (tokens/sec) */
    double real_time_factor; /* Real-Time Factor(RTF) (1.0 = real-time, >1.0 = faster, <1.0 = slower) */

    const char* stop_reason; /* Stop reason: "eos", "length", "user", "stop_sequence" */
} ml_ProfileData;
/* ========================================================================== */
/*                              LANGUAGE MODELS (LLM)                          */
/* ========================================================================== */

/** Text generation sampling parameters */
typedef struct {
    float       temperature;        /* Sampling temperature (0.0-2.0) */
    float       top_p;              /* Nucleus sampling parameter (0.0-1.0) */
    int32_t     top_k;              /* Top-k sampling parameter */
    float       min_p;              /* Minimum probability for nucleus sampling */
    float       repetition_penalty; /* Penalty for repeated tokens */
    float       presence_penalty;   /* Penalty for token presence */
    float       frequency_penalty;  /* Penalty for token frequency */
    int32_t     seed;               /* Random seed (-1 for random) */
    ml_Path     grammar_path;       /* Optional grammar file path */
    const char* grammar_string;     /* Optional grammar string (BNF-like format) */
    bool        enable_json;        /* Enable JSON grammar */
} ml_SamplerConfig;
/** LLM / VLM generation configuration (IMPROVED: support multiple images and audios) */
typedef struct {
    int32_t           max_tokens;     /* Maximum tokens to generate */
    const char**      stop;           /* Array of stop sequences */
    int32_t           stop_count;     /* Number of stop sequences */
    int32_t           n_past;         /* Number of past tokens to consider */
    ml_SamplerConfig* sampler_config; /* Advanced sampling config */
    // --- Improved multimodal support ---
    ml_Path* image_paths;      /* Array of image paths for VLM (NULL if none) */
    int32_t  image_count;      /* Number of images */
    int32_t  image_max_length; /* Maximum length of the image */
    ml_Path* audio_paths;      /* Array of audio paths for VLM (NULL if none) */
    int32_t  audio_count;      /* Number of audios */
} ml_GenerationConfig;
/** LLM / VLM model configuration */
typedef struct {
    int32_t n_ctx;            // text context, 0 = from model
    int32_t n_threads;        // number of threads to use for generation
    int32_t n_threads_batch;  // number of threads to use for batch processing
    int32_t n_batch;          // logical maximum batch size that can be submitted to llama_decode
    int32_t n_ubatch;         // physical maximum batch size
    int32_t n_seq_max;        // max number of sequences (i.e. distinct states for recurrent models)
    int32_t n_gpu_layers;     // number of layers to offload to GPU, 0 = all layers on CPU

    // TODO: consider removing the following fields from ModelConfig, or move to another struct
    ml_Path     chat_template_path;     // path to chat template file, optional
    const char* chat_template_content;  // content of chat template file, optional
    const char* system_prompt;          // system prompt for chat template, optional
    bool        enable_sampling;        // DEPRECATED, use enable_json in ml_SamplerConfig
    const char* grammar_str;            // grammar string
    int32_t     max_tokens;             // max tokens to generate
    bool        enable_thinking;        // enable thinking mode for Qwen models
    bool        verbose;                // verbose logging
    // For QNN
    ml_Path qnn_model_folder_path;  // path to QNN model folder, default same as model_path
    ml_Path qnn_lib_folder_path;    // path to QNN library folder, default same as model_path
} ml_ModelConfig;
/* ========================================================================== */
/*                              MULTIMODAL MODELS (VLM)                          */
/* ========================================================================== */

typedef struct {
    const char* type;  // "text", "image", "audio", … (null-terminated UTF-8)
    const char* text;  // payload: the actual text, URL, or special token
} ml_VlmContent;
/* ---------- Message ---------- */
typedef struct {
    const char*    role;           // "user", "assistant", "system", …
    ml_VlmContent* contents;       // dynamically-allocated array (may be NULL)
    int64_t        content_count;  // number of elements in `contents`
} ml_VlmChatMessage;
typedef struct ml_VLM ml_VLM; /* Opaque VLM handle */
/* ====================  Lifecycle Management  ============================== */

typedef struct {
    const char*    model_name;     /** Name of the model */
    ml_Path        model_path;     /** Path to the model file */
    ml_Path        mmproj_path;    /** Path to the mmproj file */
    ml_ModelConfig config;         /** Model configuration */
    ml_PluginId    plugin_id;      /** Plugin to use for the model */
    const char*    device_id;      /** device to use for the model */
    ml_Path        tokenizer_path; /** Path to the tokenizer file */
    const char*    license_id; /** licence id for loading NPU models, must be provided upon the first use of the license
                                  key. null terminated string */
    const char* license_key;   /** licence key for loading NPU models, null terminated string */
} ml_VlmCreateInput;
/**
 * @brief Create and initialize a VLM instance from model files
 *
 * @param input[in]: Input parameters for the VLM creation
 * @param out_handle[out]: Pointer to the VLM handle. Must be freed with ml_vlm_destroy.
 *
 * @return ml_ErrorCode: ML_SUCCESS on success, negative on failure.
 *
 * @thread_safety: Not thread-safe
 */
ML_API int32_t ml_vlm_create(const ml_VlmCreateInput* input, ml_VLM** out_handle);
/**
 * @brief Destroy VLM instance and free associated resources
 *
 * @param handle[in]: The VLM handle to destroy.
 *
 * @return ml_ErrorCode: ML_SUCCESS on success, negative on failure.
 *
 * @thread_safety: Not thread-safe
 */
ML_API int32_t ml_vlm_destroy(ml_VLM* handle);
/**
 * @brief Reset VLM internal state (clear KV cache, reset sampling)
 *
 * @param handle[in]: The VLM handle to reset.
 *
 * @return ml_ErrorCode: ML_SUCCESS on success, negative on failure.
 *
 * @thread_safety: Not thread-safe
 */
ML_API int32_t ml_vlm_reset(ml_VLM* handle);
/* ====================  Text Generation  ================================== */

/** Input structure for applying VLM chat template */
typedef struct {
    ml_VlmChatMessage* messages;        /** Array of chat messages */
    int32_t            message_count;   /** Number of messages */
    const char*        tools;           /** Tool JSON string (optional, can be NULL) */
    bool               enable_thinking; /** Enable thinking */

    // deepseek-ocr
    bool grounding; /** Enable grounding (Add grounding token) */
} ml_VlmApplyChatTemplateInput;
/** Output structure for applying VLM chat template */
typedef struct {
    char* formatted_text; /** Formatted chat text (caller must free with ml_free) */
} ml_VlmApplyChatTemplateOutput;
/**
 * @brief Apply chat template to messages
 *
 * @param handle[in]: VLM handle
 * @param input[in]: Input parameters for applying chat template
 * @param output[out]: Output data containing the formatted text
 *
 * @return ml_ErrorCode: ML_SUCCESS on success, negative on failure.
 */
ML_API int32_t ml_vlm_apply_chat_template(
    ml_VLM* handle, const ml_VlmApplyChatTemplateInput* input, ml_VlmApplyChatTemplateOutput* output);
/* ====================  Streaming Generation  ============================= */

/** Input structure for VLM streaming text generation */
typedef struct {
    const char*                prompt_utf8; /** The full chat history as UTF-8 string */
    const ml_GenerationConfig* config;      /** Generation configuration (optional, can be nullptr) */
    ml_token_callback          on_token;    /** Token callback function for streaming */
    void*                      user_data;   /** User data passed to callback (optional, can be nullptr) */
} ml_VlmGenerateInput;
/** Output structure for VLM streaming text generation */
typedef struct {
    char*          full_text;    /** Complete generated text (caller must free with ml_free) */
    ml_ProfileData profile_data; /** Profiling data for the generation */
} ml_VlmGenerateOutput;
/**
 * @brief Generate text with streaming token callback
 *
 * @param handle[in]: VLM handle
 * @param input[in]: Input parameters for streaming generation
 * @param output[out]: Output containing the complete generated text
 *
 * @return ml_ErrorCode: ML_SUCCESS on success, negative on failure.
 */
ML_API int32_t ml_vlm_generate(ml_VLM* handle, const ml_VlmGenerateInput* input, ml_VlmGenerateOutput* output);